Describing all figures

--- a/reports/sphere_dipole_source/sphere_dipole_source.tex
+++ b/reports/sphere_dipole_source/sphere_dipole_source.tex
@@ -3,6 +3,7 @@
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage[plain]{fancyref}
 
 \title{Long Skin Depth spherical metal values}
 \date{}
@@ -17,7 +18,7 @@
 
 \section{Approximating using a dipole source}\label{sec:spheredipolesource}
 
-Three plots of $B_z(x, 0, 0)$ induced for a metal sphere wih skin depth $\delta$ for a uniform source potential as well
+Three plots of $B_z(x, 0, 0)$ induced for a metal sphere of radius $1$ wih skin depth $\delta = 250$ for a uniform source potential as well
 as a dipole source potential, with dipole located at $(x, 0, 0)$.
 The uniform source potential is set so that for each $x$ it has the same field as the dipole source.
 Both are compared against the expected induced field for a metal sphere $B_z = \frac{1}{15 x^6 \delta^2}$.
@@ -28,16 +29,26 @@ Both are compared against the expected induced field for a metal sphere $B_z = \
 	\caption{$B_z$ as a function of $x$, for small $x$ \label{fig:plotx1to5}}
 \end{figure}
 
+For small $x$, as shown in \fref{fig:plotx1to5}, the differences between the dipole source and the uniform source are
+apparent.
+
 \begin{figure}[htp]
 	\centering
 	\includegraphics[width=14cm]{plot5to8}
 	\caption{$B_z$ as a function of $x$, where dipole source approaches uniform source \label{fig:plotx5to8}}
 \end{figure}
 
+In the regime shown in \fref{fig:plotx5to8} the dipole source effectively acts as a uniform source;
+increasing the mesh resolution reduces the error by quite a bit.
+
 \begin{figure}[htp]
 	\centering
 	\includegraphics[width=14cm]{plot8to10}
 	\caption{$B_z$ as a function of $x$, large $x$ \label{fig:plotx8to10}}
 \end{figure}
+
+In the large $x$ region in \fref{fig:plotx8to10}, I think precision errors are a more noticeable contributor to the
+error, (which might also explain why the result is calculated to be negative).
+
 
 \end{document}
