Mild refactor to separate out bz along x, and separated calc from plot

--- a/reports/sphere_dipole_source/sphere_dipole_source.tex
+++ b/reports/sphere_dipole_source/sphere_dipole_source.tex
@@ -25,29 +25,29 @@ Both are compared against the expected induced field for a metal sphere $B_z = \
 
 \begin{figure}[htp]
 	\centering
-	\includegraphics[width=14cm]{plot1to5}
-	\caption{$B_z$ as a function of $x$, for small $x$ \label{fig:plotx1to5}}
+	\includegraphics[width=14cm]{bZAlongXplot1to5}
+	\caption{$B_z$ as a function of $x$, for small $x$ \label{fig:bZZplotx1to5}}
 \end{figure}
 
-For small $x$, as shown in \fref{fig:plotx1to5}, the differences between the dipole source and the uniform source are
+For small $x$, as shown in \fref{fig:bZZplotx1to5}, the differences between the dipole source and the uniform source are
 apparent.
 
 \begin{figure}[htp]
 	\centering
-	\includegraphics[width=14cm]{plot5to8}
-	\caption{$B_z$ as a function of $x$, where dipole source approaches uniform source \label{fig:plotx5to8}}
+	\includegraphics[width=14cm]{bZAlongXplot5to8}
+	\caption{$B_z$ as a function of $x$, where dipole source approaches uniform source \label{fig:bZZplotx5to8}}
 \end{figure}
 
-In the regime shown in \fref{fig:plotx5to8} the dipole source effectively acts as a uniform source;
+In the regime shown in \fref{fig:bZZplotx5to8} the dipole source effectively acts as a uniform source;
 increasing the mesh resolution reduces the error by quite a bit.
 
 \begin{figure}[htp]
 	\centering
-	\includegraphics[width=14cm]{plot8to10}
-	\caption{$B_z$ as a function of $x$, large $x$ \label{fig:plotx8to10}}
+	\includegraphics[width=14cm]{bZAlongXplot8to10}
+	\caption{$B_z$ as a function of $x$, large $x$ \label{fig:bZZplotx8to10}}
 \end{figure}
 
-In the large $x$ region in \fref{fig:plotx8to10}, I think precision errors are a more noticeable contributor to the
+In the large $x$ region in \fref{fig:bZZplotx8to10}, I think precision errors are a more noticeable contributor to the
 error, (which might also explain why the result is calculated to be negative).
 
 
