Changing caption text to be inequalities

--- a/reports/sphere_dipole_source/sphere_dipole_source.tex
+++ b/reports/sphere_dipole_source/sphere_dipole_source.tex
@@ -60,7 +60,7 @@ the same precision errors that threw off the graphs earlier at larger distances)
 \begin{figure}[htp]
 	\centering
 	\includegraphics[width=14cm]{sphereDipoleSourceZXRatio}
-	\caption{$\flatfrac{B_z(0, 0, z)}{B_z(x, 0, 0)}$ \label{fig:dipoleSourceAnisotropy}}
+	\caption{$\flatfrac{B_z(0, 0, z)}{B_z(x, 0, 0)}$, which should be $4$ \label{fig:dipoleSourceAnisotropy}}
 \end{figure}
 
 Figures \ref{fig:bZZplotx1to5}, \ref{fig:bZZplotx5to8} and \ref{fig:bZZplotx8to10} are all plotted with the dipole
@@ -69,19 +69,19 @@ source calculated on a high resolution mesh.
 \begin{figure}[htp]
 	\centering
 	\includegraphics[width=14cm]{bZAlongZplot1to5}
-	\caption{$B_z(0, 0, z)$ for small $x$ \label{fig:bZZplotx1to5}}
+	\caption{$B_z(0, 0, z)$, $z < 5$ \label{fig:bZZplotx1to5}}
 \end{figure}
 
 \begin{figure}[htp]
 	\centering
 	\includegraphics[width=14cm]{bZAlongZplot5to8}
-	\caption{$B_z(0, 0, z)$, where dipole source approaches uniform source \label{fig:bZZplotx5to8}}
+	\caption{$B_z(0, 0, z)$, $5 < z < 8$\label{fig:bZZplotx5to8}}
 \end{figure}
 
 \begin{figure}[htp]
 	\centering
 	\includegraphics[width=14cm]{bZAlongZplot8to10}
-	\caption{$B_z(0, 0, z)$, large $x$ \label{fig:bZZplotx8to10}}
+	\caption{$B_z(0, 0, z)$, $z > 8$ \label{fig:bZZplotx8to10}}
 \end{figure}
 
 \end{document}
